--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lorem-ipsum": "^1.4.9",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
