--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "faker": "^5.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-lorem-ipsum": "^1.4.9",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^5.5.5",
     "@types/styled-components": "^5.1.9",
     "gh-pages": "^3.1.0",
     "styled-components": "^5.2.2",
